Removing unused files and pushing modified ones

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,16 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IdentityConnection": "Data Source=DESKTOP-TC60P45\\SQLEXPRESS;Database=UserDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "AppSettings": {
+    "Token": "MySecretTokenForJwt"
+  }
 }
